@@ -1,3 +1,4 @@
+Micro tab: If a crystal dissolves down to 1 particle, then convert the 1-particle crystal to dissolved solute
 Micro tab: Require two particles for forming a crystal instead of one
 # 0.00.79 (54852) Aug 3, 2011
 Micro tab: Made NO3- concentration bar blue because it represents a negative ion
